fdo#39053 writerfilter: implement RTF_BIN